# lorezu_secret_scout_cli

./: README.md  pyproject.toml
docs/: configuration.md
src/scout/cli/: app.py
src/scout/cli/commands/: baseline.py  init.py  rules.py  scan_github.py  scan_path.py
src/scout/cli/ui/: formatters.py  tui.py
src/scout/cli/utils/: __init__.py  files.py
src/scout/core/: config.py  engine.py  models.py  policy.py
src/scout/parsers/: __init__.py  common.py  dotenv_parser.py  errors.py  ini_parser.py  json_parser.py  toml_parser.py  types.py  yaml_parser.py
